# clean_fastapi

./: .pre-commit-config.yaml  .precommit.config.yaml  .travis.yml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg
src/clean/adapters/: orm.py
src/clean/domain/: model.py
src/cleanarchitecture_fastapi/domain/: model.py
tests/: conftest.py  test_cleanarchitecture_fastapi.py
tests/adapters/: test_orm.py
tests/domain/: test_todo_entity.py
tests/utilities/: db_postgresql_inmemory.py
