[tool.poetry]
name = "cleanarchitecture_fastapi"
version = "0.1.0"
description = ""
authors = ["Lionel Hamayon <lionel.hamayon@evolution-digitale.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.25"
uvicorn = "^0.15.0"
anytree = "^2.8.0"
slugify = "^0.0.1"
psycopg2 = "^2.9.1"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-postgresql = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
